<resources>
    <string name="app_name">My App Porfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="app0">Spotify streamer</string>
    <string name="app1">Scores app</string>
    <string name="app2">Library app</string>
    <string name="app3">Build it bigger</string>
    <string name="app4">XYZ Reader</string>
    <string name="app5">Capstone: My own app</string>
</resources>
