<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".AppLauncher"
    android:background="#E0F2F1">

    <TextView android:text="@string/title"
        android:id="@+id/textView"
        style="@style/TitleStyle" />
    <Button android:id="@+id/btnApp0" android:text="@string/app0" android:layout_below="@+id/textView" style="@style/btnStyle"/>
    <Button android:id="@+id/btnApp1" android:text="@string/app1" android:layout_below="@+id/btnApp0" style="@style/btnStyle" />
    <Button android:id="@+id/btnApp2" android:text="@string/app2" android:layout_below="@+id/btnApp1" style="@style/btnStyle" />
    <Button android:id="@+id/btnApp3" android:text="@string/app3" android:layout_below="@+id/btnApp2" style="@style/btnStyle" />
    <Button android:id="@+id/btnApp4" android:text="@string/app4" android:layout_below="@+id/btnApp3" style="@style/btnStyle" />
    <Button android:id="@+id/btnApp5" android:text="@string/app5" android:layout_below="@+id/btnApp4" style="@style/btnStyle" />
</RelativeLayout>
